fix logo spacing

--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -7,10 +7,10 @@ svg {
 .icon-theaironearth {
     stroke: $black;
     stroke-width: 20;
-    width: 260px;
+    width: 100%;
     height: 60px;
     @include desktop-and-up {
-        height: 28px;
+        width: 220px;
     }
 }
 
